# ledmusic2.0

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
modules/: CMakeLists.txt
modules/bass_adapter/: CMakeLists.txt
modules/bass_adapter/example/: bass_sample_data_example.cpp
modules/bass_adapter/include/bass_adapter/: bass_adapter.hpp  bass_exception.hpp
modules/bass_adapter/src/: bass_adapter.cpp  bass_exception.cpp
modules/pulse_adapter/: CMakeLists.txt
modules/pulse_adapter/example/: device_list_example.cpp
modules/pulse_adapter/include/pulse_adapter/: pulse_adapter.hpp  pulse_capture.hpp  pulse_device.hpp  pulse_exception.hpp  pulse_mainloop.hpp
modules/pulse_adapter/src/: pulse_adapter.cpp  pulse_capture.cpp  pulse_exception.cpp  pulse_mainloop.cpp
modules/serial_port/: CMakeLists.txt
modules/serial_port/cmake/: transport.cmake
modules/serial_port/include/serial_port/: serial_port.hpp
modules/serial_port/pb/: color.proto
modules/serial_port/src/: serial_port.cpp
src/: main.cpp
